<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="?colorOnPrimary"
    app:cardCornerRadius="28dp"
    android:layout_marginHorizontal="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_filter_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_medium"
            android:gravity="center"
            android:text="@string/label_choose_filter"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:text="@string/description_how_should_animals_be_sorted"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sort_by_name"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="310dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_by_name"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:strokeColor="?colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sort_by_breed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="310dp"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_by_breed"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sort_by_name"
            app:strokeColor="?colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sort_by_age"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="310dp"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_by_age"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sort_by_breed"
            app:strokeColor="?colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>